# pkg/db/model.sql.go
@@ -21,7 +21,7 @@ func (q *Queries) DeleteModel(ctx context.Context, name string) error {
 }
 
 const getModelByName = `-- name: GetModelByName :one
-SELECT name, title, developer, series FROM model WHERE name = $1 LIMIT 1
+SELECT name, title, developer, series, disabled FROM model WHERE name = $1 LIMIT 1
 `
 
 func (q *Queries) GetModelByName(ctx context.Context, name string) (Model, error) {
@@ -32,12 +32,13 @@ func (q *Queries) GetModelByName(ctx context.Context, name string) (Model, error
 		&i.Title,
 		&i.Developer,
 		&i.Series,
+		&i.Disabled,
 	)
 	return i, err
 }
 
 const getModels = `-- name: GetModels :many
-SELECT name, title, developer, series FROM model
+SELECT name, title, developer, series, disabled FROM model
 `
 
 func (q *Queries) GetModels(ctx context.Context) ([]Model, error) {
@@ -54,6 +55,7 @@ func (q *Queries) GetModels(ctx context.Context) ([]Model, error) {
 			&i.Title,
 			&i.Developer,
 			&i.Series,
+			&i.Disabled,
 		); err != nil {
 			return nil, err
 		}
@@ -66,7 +68,7 @@ func (q *Queries) GetModels(ctx context.Context) ([]Model, error) {
 }
 
 const upsertModel = `-- name: UpsertModel :one
-INSERT INTO model (name, title, developer, series) VALUES ($1, $2, $3, $4) ON CONFLICT (name) DO UPDATE SET title = $2, developer = $3, series = $4 RETURNING name, title, developer, series
+INSERT INTO model (name, title, developer, series, disabled) VALUES ($1, $2, $3, $4, $5) ON CONFLICT (name) DO UPDATE SET title = $2, developer = $3, series = $4, disabled = $5 RETURNING name, title, developer, series, disabled
 `
 
 type UpsertModelParams struct {
@@ -74,6 +76,7 @@ type UpsertModelParams struct {
 	Title     pgtype.Text `json:"title"`
 	Developer pgtype.Text `json:"developer"`
 	Series    pgtype.Text `json:"series"`
+	Disabled  bool        `json:"disabled"`
 }
 
 func (q *Queries) UpsertModel(ctx context.Context, arg UpsertModelParams) (Model, error) {
@@ -82,6 +85,7 @@ func (q *Queries) UpsertModel(ctx context.Context, arg UpsertModelParams) (Model
 		arg.Title,
 		arg.Developer,
 		arg.Series,
+		arg.Disabled,
 	)
 	var i Model
 	err := row.Scan(
@@ -89,6 +93,7 @@ func (q *Queries) UpsertModel(ctx context.Context, arg UpsertModelParams) (Model
 		&i.Title,
 		&i.Developer,
 		&i.Series,
+		&i.Disabled,
 	)
 	return i, err
 }
